# vscode-vcpkg-cmake-example

./: CMakeLists.txt  README.md  main.cpp
